Solved textual alignment issue

--- a/src/components/MyWager/MyWager.less
+++ b/src/components/MyWager/MyWager.less
@@ -29,7 +29,7 @@
               width: 150px;
             }
             &:nth-of-type(7) {
-              width: 85px;
+              width: 105px;
             }
             &:nth-of-type(4) {
               width: 160px;
